# vcpkg-registry

./: .gitignore  README.md
examples/installing-vcpkg-artifacts/: README.md
examples/installing-vcpkg-artifacts/prjct/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
examples/installing-vcpkg-artifacts/prjct/src/: CMakeLists.txt
examples/installing-vcpkg-artifacts/prjct/src/some/: CMakeLists.txt  Config.cmake.in  some.cpp
examples/installing-vcpkg-artifacts/prjct/src/some/include/SomeLibrary/: some.h
examples/installing-vcpkg-artifacts/prjct/src/tool/: CMakeLists.txt  main.cpp
examples/installing-vcpkg-artifacts/tl/: CMakeLists.txt
examples/installing-vcpkg-artifacts/tl/src/: main.cpp
examples/modifying-original-sources-without-updating-port/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
examples/modifying-original-sources-without-updating-port/src/: main.cpp
examples/z7-binary-size-comparison/: README.md  vcpkg-configuration.json  vcpkg.json
ports/abseil/: 001-proper-version.patch  002-no-pkg-config.patch  portfile.cmake  usage  vcpkg.json
ports/alsa/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
ports/asio/: CMakeLists.txt  Config.cmake.in  portfile.cmake  vcpkg.json
ports/assimp/: 001-dependencies-and-installation.patch  002-missing-include-algorithm.patch  cmake-config-paths.patch  dependencies-discovery-and-installation.patch  disable-pkgconfig.patch  do-not-override-flags.patch  do-not-vendor-zlib-ffs.patch  missing-define-fopen64.patch  portfile.cmake  vcpkg.json  winapi-uwp.patch
ports/aws-sdk-cpp/: 001-not-hardcoding-shared-libraries-and-crt.patch  002-dependencies-and-installation.patch  003-not-outputing-generated-headers-into-source-tree.patch  portfile.cmake  usage  vcpkg.json
ports/boost/: _notes.md  (+6 more)
ports/boost-accumulators/: portfile.cmake  vcpkg.json
ports/boost-algorithm/: portfile.cmake  vcpkg.json
ports/boost-align/: portfile.cmake  vcpkg.json
ports/boost-any/: portfile.cmake  vcpkg.json
ports/boost-array/: portfile.cmake  vcpkg.json
ports/boost-asio/: features.cmake  portfile.cmake  vcpkg.json
ports/boost-assert/: portfile.cmake  vcpkg.json
ports/boost-assign/: portfile.cmake  vcpkg.json
ports/boost-atomic/: portfile.cmake  vcpkg.json
ports/boost-beast/: portfile.cmake  vcpkg.json
ports/boost-bimap/: portfile.cmake  vcpkg.json
ports/boost-bind/: portfile.cmake  vcpkg.json
ports/boost-bloom/: portfile.cmake  vcpkg.json
ports/boost-build/: portfile.cmake
ports/boost-callable-traits/: portfile.cmake  vcpkg.json
ports/boost-charconv/: portfile.cmake  vcpkg.json
ports/boost-chrono/: portfile.cmake  vcpkg.json
ports/boost-circular-buffer/: portfile.cmake  vcpkg.json
ports/boost-cmake/: CMakeLists.txt.in  portfile.cmake
ports/boost-cobalt/: portfile.cmake  vcpkg.json
ports/boost-compat/: portfile.cmake  vcpkg.json
ports/boost-compute/: portfile.cmake  vcpkg.json
ports/boost-concept-check/: portfile.cmake  vcpkg.json
ports/boost-config/: portfile.cmake  vcpkg.json
ports/boost-container/: portfile.cmake  vcpkg.json
ports/boost-container-hash/: portfile.cmake  vcpkg.json
ports/boost-context/: portfile.cmake  vcpkg.json
ports/boost-contract/: portfile.cmake  vcpkg.json
ports/boost-conversion/: portfile.cmake  vcpkg.json
ports/boost-convert/: portfile.cmake  vcpkg.json
ports/boost-core/: portfile.cmake  vcpkg.json
ports/boost-coroutine/: portfile.cmake  vcpkg.json
ports/boost-coroutine2/: portfile.cmake  vcpkg.json
ports/boost-crc/: portfile.cmake  vcpkg.json
ports/boost-date-time/: portfile.cmake  vcpkg.json
ports/boost-describe/: portfile.cmake  vcpkg.json
ports/boost-detail/: portfile.cmake  vcpkg.json
ports/boost-dll/: portfile.cmake  vcpkg.json
ports/boost-dynamic-bitset/: portfile.cmake  vcpkg.json
ports/boost-endian/: portfile.cmake  vcpkg.json
ports/boost-exception/: features.cmake  portfile.cmake  vcpkg.json
ports/boost-fiber/: portfile.cmake  vcpkg.json
ports/boost-filesystem/: portfile.cmake  vcpkg.json
ports/boost-flyweight/: portfile.cmake  vcpkg.json
ports/boost-foreach/: portfile.cmake  vcpkg.json
ports/boost-format/: portfile.cmake  vcpkg.json
ports/boost-function/: portfile.cmake  vcpkg.json
ports/boost-function-types/: portfile.cmake  vcpkg.json
ports/boost-functional/: portfile.cmake  vcpkg.json
ports/boost-fusion/: portfile.cmake  vcpkg.json
ports/boost-geometry/: portfile.cmake  vcpkg.json
ports/boost-gil/: portfile.cmake  vcpkg.json
ports/boost-graph/: portfile.cmake  vcpkg.json
ports/boost-graph-parallel/: portfile.cmake  vcpkg.json
ports/boost-hana/: portfile.cmake  vcpkg.json
ports/boost-hash2/: portfile.cmake  vcpkg.json
ports/boost-headers/: portfile.cmake  vcpkg.json
ports/boost-heap/: portfile.cmake  vcpkg.json
ports/boost-histogram/: portfile.cmake  vcpkg.json
ports/boost-hof/: portfile.cmake  vcpkg.json
scripts/: README.md  add-new-version.py  check-versions-and-hashes.py  check-versions-and-hashes.sh  install-vcpkg-artifacts.py  install-vcpkg-artifacts.sh  license-based-todos.py  top-retarted-projects.py  vcpkg-assets-caching.ps1  vcpkg-tools.json
tests/dearimgui-glad-glfw-implot/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
tests/dearimgui-glad-glfw-implot/src/: imgui-style.h  main.cpp
tests/png-zlib/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
tests/png-zlib/src/: main.cpp
toolchains/: _set-vcpkg-registry-path.cmake  emscripten-pthreads.cmake  ios-fat.cmake  windows-clang.cmake  windows.cmake
triplets/: decovar-arm64-ios-fat.cmake  decovar-arm64-osx-fat.cmake  decovar-arm64-uwp-v143.cmake  decovar-wasm32-emscripten-pthreads.cmake  decovar-wasm32-emscripten.cmake  decovar-x64-uwp-v143.cmake  decovar-x64-windows-static-md-clang.cmake  decovar-x64-windows-static-md-v141.cmake  decovar-x64-windows-static-md-v142.cmake  decovar-x64-windows-static-md-v143.cmake  decovar-x64-windows-static-md-v145.cmake
versions/: baseline.json
(+991 files in other folders)
